# muri

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
gui/preprocessor/include/: preprocessordrawingwidget.h  preprocessorwindow.h
gui/preprocessor/src/: preprocessordrawingwidget.cpp  preprocessorwindow.cpp  preprocessorwindow.ui
include/: gvar.h  mainwindow.h
preprocessor/include/: cube.h  grid.h  material.h  materiallib.h  model.h
preprocessor/src/: grid.cpp
preprocessor/tests/: grid_test.cpp
src/: mainwindow.cpp  mainwindow.ui
